force-app/main/default/objects/Not_Contactable_Email_Alerts__c/Not_Contactable_Email_Alerts__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Not Contactable Email Alerts</label>
</CustomObject>