force-app/main/default/objects/Not_Contactable_Email_Alerts__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <label>Email Template (Template Unique Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>