force-app/main/default/objects/Not_Contactable_Email_Alerts__c/fields/Number_Field__c.field-meta.xml
<CustomField>
    <fullName>Number_Field__c</fullName>
    <inlineHelpText>Project Object field API Name</inlineHelpText>
    <label>Project Object Number Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>