force-app/main/default/objects/Not_Contactable_Email_Alerts__c/fields/User_Mobile_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>User_Mobile_Number_Field__c</fullName>
    <label>User Mobile Number Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>